# origin

./: .gitignore  README.md
advanced programming/Lesson 1/task1/: task1.sln
advanced programming/Lesson 10/task1/: task1.cpp  task1.sln  task1.vcxproj
advanced programming/Lesson 10/task2/: task2.sln  task2.vcxproj
advanced programming/Lesson 10/task3/: my_unique_ptr.h  task3.cpp  task3.sln  task3.vcxproj  task3.vcxproj.filters
advanced programming/Lesson 11/task1/: task1.cpp  task1.sln  task1.vcxproj
advanced programming/Lesson 11/task2/: README.md  big_integer.cpp  big_integer.h  task2.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
advanced programming/Lesson 2/task1/: task1.cpp  task1.vcxproj
advanced programming/Lesson 3/task1/: smart_array.cpp  smart_array.h  task1.cpp  task1.sln  task1.vcxproj  task1.vcxproj.filters
advanced programming/Lesson 3/task2/: smart_array.cpp  smart_array.h  task2.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
advanced programming/Lesson 4/task1/: CMakeLists.txt  main.cpp
advanced programming/Lesson 4/task2/: CMakeLists.txt  task2.cpp
advanced programming/Lesson 5/task1/: task1.cpp  task1.sln  task1.vcxproj
advanced programming/Lesson 5/task2/: table2.h  task2.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
advanced programming/Lesson 5/task3/: task3.cpp  task3.sln  task3.vcxproj
advanced programming/Lesson 7/task1/: task1.cpp  task1.sln  task1.vcxproj
advanced programming/Lesson 7/task2/: task2.cpp  task2.sln  task2.vcxproj
advanced programming/Lesson 7/task3/: myvector.cpp  myvector.h  task3.cpp  task3.sln  task3.vcxproj  task3.vcxproj.filters  vectory.cpp  vectory.hpp
advanced programming/Lesson 8/task1/: task1.cpp  task1.sln  task1.vcxproj
advanced programming/Lesson 8/task2/: task2.cpp  task2.sln  (+1 more)
basic_programming/Lesson 10/task 2/: CMakeLists.txt  parallelogram.cpp  parallelogram.h  quadrangle.h  square.h  task2.cpp
basic_programming/Lesson 11/task5/: CMakeLists.txt  quadrangle.cpp  rectangle.h  rhombus.cpp  triangle.cpp
basic_programming/Project Racing simulator/task/: CMakeLists.txt  main.cpp
basic_programming/Project Racing simulator/task/other/: resultRace.cpp  resultRace.h
basic_programming/Project Racing simulator/task/track/: airTrack.cpp  airTrack.h  allTrack.cpp  allTrack.h  groundTrack.cpp  groundTrack.h  track.cpp  track.h
basic_programming/Project Racing simulator/task/transport/cppishki/: airTransport.cpp  baseTransport.cpp  boots.cpp  broom.cpp  camel.cpp  camelFast.cpp  carpet.cpp  centaur.cpp  eagle.cpp  groungTransport.cpp
basic_programming/Project Racing simulator/task/transport/included/: airTransport.h  baseTransport.h  boots.h  broom.h  camel.h  camelFast.h  carpet.h  centaur.h  eagle.h  groungTransport.h
database/Lesson 4/: CREATE music.sql  Insert music.sql  SELECT music task 2.sql  SELECT music task 3.sql
database/Lesson 5/task 1/: CMakeLists.txt  DBclass.cpp  DBclass.h  README.md  main.cpp
diploma thesis - Crawler/: README.md
diploma thesis - Crawler/Crawler/: CMakeLists.txt  main.cpp
diploma thesis - Crawler/Searcher/: CMakeLists.txt
diploma thesis - Crawler/Searcher/data base/sql builders/: sql_insert_query_builder.h  sql_query.h  sql_update_query_builder.h
diploma thesis - Crawler/Searcher/files/: crawler_data.ini  main_crawler.html
diploma thesis - Crawler/Searcher/ini-parser/: myexpect.h  parser.cpp  parser.h
diploma thesis - Crawler/Searcher/internet/: httpServer.cpp  httpServer.h
diploma thesis - Crawler/cpp-httplib-0.24.0-copy/: CMakeLists.txt  README.md  httplib_S.h  meson.build  meson_options.txt
diploma thesis - Crawler/cpp-httplib-0.24.0-copy/benchmark/cpp-httplib/: main.cpp
diploma thesis - Crawler/cpp-httplib-0.24.0-copy/cmake/: httplib_SConfig.cmake.in
diploma thesis - Crawler/cpp-httplib-0.24.0-copy/docker/: main.cc
diploma thesis - Crawler/cpp-httplib-0.24.0-copy/example/: accept_header.cc  benchmark.cc  hello.cc  one_time_request.cc  redirect.cc  simplecli.cc  simplesvr.cc
diploma thesis - Crawler/cpp-httplib-0.24.0-copy/test/: Makefile  include_windows_h.cc  test_proxy.cc
diploma thesis/Crawler/: CMakeLists.txt  crawler_data.ini  http_connect.h  iterateSite.cpp  iterateSite.h  main.cpp  my_utilites.cpp  my_utilites.h
diploma thesis/Crawler/data base/: DBManager.cpp  DBManager.h  DBclass.cpp  DBclass.h  DBsimulation.cpp  DBsimulation.h  sql_create_query_builder.h  sql_delete_query_builder.h  sql_insert_query_builder.h  sql_query.h  sql_query_builders.h  sql_select_query_builder.h  sql_update_query_builder.h
diploma thesis/Crawler/data base/sql builders/: sql_create_query_builder.h  sql_delete_query_builder.h  sql_insert_query_builder.h  sql_query.h  sql_select_query_builder.h  sql_update_query_builder.h
diploma thesis/Crawler/files/: crawler_data.ini  main_crawler.html
diploma thesis/Crawler/indexator/: indexator.cpp  indexator.h
diploma thesis/Crawler/ini-parser/: parser.cpp  parser.h
diploma thesis/Crawler/internet/: addrSite.cpp  addrSite.h  httpClient.cpp  httpClient.h  httpServer.cpp  httpServer.h  iterateSite.cpp  iterateSite.h  listLinks.cpp  listLinks.h
diploma thesis/Crawler/internet/old/: http_connect.h
diploma thesis/Crawler/old/: indexator_old.cpp  indexator_old.h  iterateSite_old.cpp  iterateSite_old.h
diploma thesis/Crawler/threads pool/: safe_queue.h  safe_queue_arg.h  safe_queue_str.h  threads_pool.h  threads_pool_arg.h  threads_pool_str.cpp  threads_pool_str.h
diploma thesis/Crawler/threads pool/old version/: safe_queue.h  safe_queue_str.h  threads_pool.h  threads_pool_str.cpp  threads_pool_str.h
diploma thesis/Searcher/: CMakeLists.txt  main.cpp
diploma thesis/cpp-httplib-0.24.0-copy/: CMakeLists.txt  Dockerfile  README.md  httplib_S.h  meson.build  split.py
multithreading/Lesson 5/: Dockerfile  task2.cpp
multithreading/Threadsave queue/: README.md  Threadsave queue.sln  Threadsave queue.vcxproj  Threadsave queue.vcxproj.filters  main.cpp  safe_queue_f.h  safe_queue_pt.h  safe_queue_tmplt.h  set include.h  thread_pool_f.h  thread_pool_pt.h  thread_pool_tmplt.h
(+420 files in other folders)
