cmake_minimum_required(VERSION 3.22.0)
project(figure)
add_executable(figurEX task2.cpp 
equiLatTriangle.cpp equiLatTriangle.h 
figure.cpp figure.h 
isoscelesTriangle.cpp isoscelesTriangle.h 
parallelogram.cpp parallelogram.h 
quadrangle.cpp quadrangle.h 
rectangle.cpp rectangle.h 
rhombus.cpp rhombus.h 
rightTriangle.cpp rightTriangle.h 
square.cpp square.h 
triangle.cpp triangle.h)