cmake_minimum_required(VERSION 3.20)
project(MyProject1)
set(PostgreSQL_ADDITIONAL_VERSIONS "17")
add_executable(MyProject1 main.cpp DBclass.h DBclass.cpp)
add_subdirectory("R:/Development/Library_and_framework/libpq++/libpqxx-7.10.1" libpqxx-build)
target_compile_features(MyProject1 PRIVATE cxx_std_17)
target_link_libraries(MyProject1 pqxx)