cmake_minimum_required(VERSION 3.20)
project(MyProject1)
#set(PostgreSQL_ADDITIONAL_VERSIONS "17")
#add_executable(MyProject1 main.cpp DBclass.h DBclass.cpp)
#add_subdirectory("R:/Development/Library_and_framework/libpq++/libpqxx-7.10.1" libpqxx-build)
#target_compile_features(MyProject1 PRIVATE cxx_std_17)
#target_link_libraries(MyProject1 pqxx)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories("R:/Development/Programming_tools/vcpkg/vcpkg/buildtrees/libpqxx/src/7.10.0-a5d32b19bc.clean/include" )
find_package(libpqxx REQUIRED)
add_executable(MyProject main.cpp DBclass.h DBclass.cpp)
target_link_libraries(MyProject PRIVATE libpqxx::pqxx  ws2_32)